# final_project_game

./: .gitignore  CMakeLists.txt  FinalPorject.exe.lnk  Interface.h  View.cpp  character.cpp  character.h  config.h  main.cpp  view.cpp  view.h
Interface/: Object.cpp  Object.h  View.cpp  View.h
objects/: Hud.cpp  Hud.h  character.h
